--- a/content/example-post.mdx
+++ b/content/example-post.mdx
@@ -1,18 +1,16 @@
 ---
-title: "This is an example post"
-author: "Ferhat Saritas"
-category: "example"
-date: "2022-03-13"
-excerpt: "This is sample content. The section above is called Frontmatter where we can add post metadata like title and author. You can add as little or as many properties in the frontmatter using YAML syntax."
-tags:
-    - example
+  title: "This is an example post"
+  author: "Ferhat Saritas"
+  category: "example"
+  date: "2022-03-13"
+  excerpt:
+    "This is sample content. The section above is called Frontmatter where we can add post metadata like title and author. You can add as little or as many properties in the frontmatter using YAML syntax."
+  tags: [example]
 ---
 
 ## This is an example blog post
 
 This is sample content. The section above is called Frontmatter where we can add post metadata like title and author. You can add as little or as many properties in the frontmatter using YAML syntax.
-
-
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam justo risus, tristique ac venenatis in, rhoncus non arcu. Quisque in dignissim nibh, tincidunt ullamcorper purus. Nullam augue ante, accumsan non vulputate a, tincidunt quis tortor. Nulla maximus consectetur tellus, quis euismod felis. Donec auctor ornare mauris, et auctor arcu volutpat congue. Maecenas malesuada neque et luctus consequat. Proin ac magna porta mi sodales porta. Suspendisse vel felis a libero tincidunt dictum. Etiam vitae congue erat. Ut vulputate lacus tortor, in ornare mauris scelerisque in. Vestibulum gravida vel neque et pharetra. Aenean nunc lacus, blandit ac augue non, pellentesque semper lectus.
 
@@ -33,3 +31,8 @@ Morbi congue scelerisque elit et hendrerit. Praesent nec quam ac arcu consequat 
 Praesent condimentum finibus velit, nec venenatis felis pharetra ut. Phasellus eget tincidunt urna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam erat ligula, rhoncus ac sagittis at, porttitor sagittis diam. Vivamus quis nunc et nunc placerat auctor eget ac ipsum. Aenean ullamcorper tortor posuere nulla rutrum varius. Etiam erat arcu, tempor eget odio eu, eleifend hendrerit orci. Fusce quis erat semper, elementum urna ut, imperdiet dui.
 
 Mauris vel tempor leo. Proin eu justo nisi. Etiam scelerisque fringilla tempus. Nulla suscipit mi libero, ac laoreet enim feugiat congue. Integer posuere faucibus elementum. Phasellus vitae purus ligula. Vestibulum non dolor vitae arcu vestibulum ultrices nec a neque. Morbi molestie augue vel erat elementum, ac pulvinar felis volutpat. Sed vitae vestibulum lectus. Quisque consequat leo ut justo mollis dapibus.
+
+```
+export default ({children}) => <div>{children}</div>
+```
+
